# SAILC

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  pyproject.toml  setup.py
resources/: .saildb.env  BUILD
saildb/: BUILD  __init__.py  basic_test.py  defs.bzl
saildb/bindings/: BUILD  core.cpp
saildb/sailc/common/: BUILD  constants.hpp  cstring.cpp  cstring.hpp  data.cpp  data.hpp  strutil.hpp  typing.hpp  utils.hpp
saildb/sailc/driver/: BUILD  Environment.cpp  Environment.hpp
saildb/sailc/wapi/: BUILD  internal.cpp  internal.hpp  lsa.cpp  secrets.cpp  sys.cpp  wapi.hpp
tests/: test_pkg.py
