module(name = 'saildb')

# Versions
PY_VERSION         = '3.10'
PY_BIND_VERSION    = '2.12.0'
PY_RULES_VERSION   = '0.35.0'
SKYLIB_VERSION     = '1.7.1'
PLATFORM_VERSION   = '0.0.10'

# Deps
bazel_dep(name = 'platforms', version = PLATFORM_VERSION)
bazel_dep(name = 'bazel_skylib', version = SKYLIB_VERSION)
bazel_dep(name = 'pybind11_bazel', version = PY_BIND_VERSION)
bazel_dep(name = 'rules_python', version = PY_RULES_VERSION)

# Py toolchain
python = use_extension('@rules_python//python/extensions:python.bzl', 'python')
python.toolchain(
  python_version = PY_VERSION,
)
